--- a/PAGINAS/CSS/inicio.css
+++ b/PAGINAS/CSS/inicio.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Arial Rounded MT Bold';
-    src: url('../FONTS/arial-rounded-mt-bold/ARLRDBD.ttf') format('truetype');
+    src: url('../../FONTS/arial-rounded-mt-bold/ARLRDBD.ttf') format('truetype');
     font-weight: bold;
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
@@ -13,7 +13,14 @@
 }
 body{
     font-size: 12px;
+    
 }
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 header{
     padding: 3vh 0px;
     background-color: #606C38;
@@ -22,6 +29,7 @@ header{
     height: 12vh;
     justify-content: space-between;
     align-items: center;
+    /* position: relative; */
 }
 #logo{
     position: relative;
@@ -45,6 +53,7 @@ header nav{
     display: flex;
     margin-right: 5vw;
     justify-content: space-around;
+    position: relative;
 }
 
 header nav a{
@@ -66,7 +75,7 @@ a:active{
 }
 
 
-header a::after {
+header a.aCabecera::after {
     content: "";
     position: absolute;
     top: 24px;
@@ -76,14 +85,244 @@ header a::after {
     background: #BC6C25;
     transition: left .5s;
 }
-header a:hover:after {
+header a.aCabecera:hover:after {
     left: 0;
 }
+#divPortada{
+    display: flex;
+    justify-content: center;
+}
 #portada{
-    min-height: 35vh;
-    width: 100%;
+    min-height: 20vh;
+    width: 100vw;
+    max-width: 1800px;
     background-image: url(../IMGS/portadaInicio.jpeg);
     background-size: cover;
-    background-position: center center;
+    background-position-y: -540px;
     background-repeat: no-repeat
+}
+#username{
+    color: white;
+    cursor: pointer;
+    font-size: 1.2rem;
+    display: inline-block; 
+    padding: 5px 10px; 
+    border-radius: 5px; 
+    transition: background-color 0.3s;
+}
+#username:hover, #username:focus {
+    background-color: #BC6C25; 
+    color: white; 
+}
+
+#desplegable a{
+    color: #283618;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    overflow: visible;
+    display: block;
+    text-decoration: none;
+    font-size: 0.9rem;
+    padding: 10px 15px;
+    background-color: white;
+    transition: background-color 0.3s;
+}
+#desplegable a:hover, #desplegable a:focus {
+    background-color: #BC6C25; 
+    color: white; 
+}
+#desplegable{
+    display: none;
+    position: absolute;
+    top: 100%;
+    background-color: #ffffff; 
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2); 
+    border-radius: 5px; 
+    width: auto; 
+    min-width: 150px; 
+    z-index: 100; 
+}
+#desplegable.mostrarDesplegable{
+    display: block;
+}
+
+#menu{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: relative;
+    top: -3vh;
+}
+#menu.fijo {
+    position: fixed;
+    top: 0.2vh;
+    left: 0;
+    width: 100%;
+    z-index: 1000; 
+}
+#raceName{
+    border-top: 4px solid #606C38;
+    border-bottom: 4px solid #606C38;
+    border-left: 4px solid #606C38;
+    border-right: 2px solid #606C38;
+    padding: 10px;
+    width: 20vw;
+    outline: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1rem;
+    color: #283618;
+    max-width: 540px;
+}
+#lugarCarrera{
+    border-top: 4px solid #606C38;
+    border-bottom: 4px solid #606C38;
+    border-left: 2px solid #606C38;
+    border-right: 2px solid #606C38;
+    padding: 10px;
+    outline: none;
+    max-width: 210px;
+}
+#buscar{
+    border-top: 4px solid #606C38;
+    border-bottom: 4px solid #606C38;
+    border-left: 2px solid #606C38;
+    border-right: 4px solid #606C38;
+    width: 8vw;
+    max-width: 210px;
+}
+#buscar button{
+    background-color: #283618;
+    color: white;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    cursor: pointer;
+    outline: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1rem;
+    font-weight: bolder;
+}
+section{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1800px;
+    align-self: center;
+}
+
+section h1{
+    font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+    color: #283618;
+    font-size: 3rem;
+    width: 40%;
+    margin-left: 5vh;
+}
+h1 span{
+    color: #BC6C25;
+}
+#filter{
+    color: #283618;
+    font-size: 1.2rem;
+    font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+    align-self: flex-end;
+    margin-right: 5vh;
+    cursor: pointer;
+}
+#carreras{
+    margin-top: 5vh;
+    max-width: 1800px;
+    width: 95vw;
+    height: 80vh;
+    align-self: center;
+    border: 3px solid #606C38;
+    margin-bottom: 10vh;
+    padding: 35px;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
+    grid-template-rows: repeat(2, minmax(170px, 1fr));
+    gap: 40px;
+    overflow-y: scroll;
+}
+#carreras::-webkit-scrollbar {
+    width: 8px; /* Ancho de la barra de desplazamiento */
+    
+}
+
+/* Personaliza el fondo de la barra de desplazamiento */
+#carreras::-webkit-scrollbar-track {
+    background: white; /* Color de fondo */
+}
+
+/* Personaliza el thumb de la barra de desplazamiento */
+#carreras::-webkit-scrollbar-thumb {
+    background: #283618; /* Color del thumb */
+}
+
+/* Personaliza el thumb de la barra de desplazamiento al pasar el mouse */
+#carreras::-webkit-scrollbar-thumb:hover {
+    background: #283618; /* Color del thumb al pasar el mouse */
+}
+
+.tarjetaCarrera{
+
+    box-shadow: 0px 2px 4px 0 rgba(0,0,0,0.5);
+}
+.fotoPortada{
+    min-height: 70px;
+    height: 72%;
+    
+}
+.datosCarrera{
+    position: relative;
+    border: 1px solid #606C38;
+}
+.datosCarrera span{
+    font-size: 0.8rem;
+}
+span.fecha{
+    position: absolute;
+    top: 4px;
+    left: 6px;
+    color: #283618;
+    
+    font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+}
+span.localidad{
+    position: absolute;
+    top: 4px;
+    right: 6px;
+    color: #283618;
+    
+    font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+}
+
+span.distancia{
+    position: absolute;
+    top: 30px;
+    left: 6px;
+    color: #283618;
+    
+    font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+}
+div.detallesCarrera{
+    position: absolute;
+    top: 30px;
+    right: 6px;
+    color: #BC6C25;
+    
+    font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+    border: 2px solid #BC6C25;
+    border-radius: 5px;
+    padding: 2px 7px;
+    border-radius: 20px;
+    transition: color 0.3s, background-color 0.3s, box-shadow 0.3s;
+}
+div.detallesCarrera:hover{
+    background-color: #BC6C25;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0px 2px 4px 0 rgba(0,0,0,0.5);
+}
+div.datosCarrera i{
+    margin-right: 5px;
 }
