--- a/PAGINAS/CSS/inicio.css
+++ b/PAGINAS/CSS/inicio.css
@@ -109,6 +109,7 @@ header a.aCabecera:hover:after {
     padding: 5px 10px; 
     border-radius: 5px; 
     transition: background-color 0.3s;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #username:hover, #username:focus {
     background-color: #BC6C25; 
@@ -182,6 +183,26 @@ header a.aCabecera:hover:after {
     outline: none;
     max-width: 210px;
 }
+#finalizadas{
+    display: flex;
+    padding: 10px 30px;
+    background-color: white;
+    border-top: 4px solid #606C38;
+    border-bottom: 4px solid #606C38;
+    border-left: 2px solid #606C38;
+    border-right: 2px solid #606C38;
+    color: #283618;
+    font-size: 1rem;
+}
+#finalizadas label{
+    margin-right: 10px;
+}
+#finalizadas input{
+    height: 15px;
+    width: 15px;
+    align-items: center;
+    margin-top: 3px;
+}
 #buscar{
     border-top: 4px solid #606C38;
     border-bottom: 4px solid #606C38;
@@ -216,60 +237,116 @@ section h1{
     font-size: 3rem;
     width: 40%;
     margin-left: 5vh;
+    margin-top: 2vh;
 }
 h1 span{
     color: #BC6C25;
+}
+#ordenar{
+    position: relative;
+    align-self: flex-end;
+    margin-right: 15vh;
+    z-index: 555555;
+}
+#desplegableOrdenar{
+    margin-top: 1vh;
+    display: none;
+    position: absolute;
+    top: 100%;
+    background-color: #ffffff; 
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2); 
+    border-radius: 5px; 
+    width: auto; 
+    min-width: 150px; 
+    z-index: 100; 
+}
+
+#desplegableOrdenar span{
+    color: #283618;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    overflow: visible;
+    display: block;
+    text-decoration: none;
+    font-size: 0.9rem;
+    padding: 10px 15px;
+    background-color: white;
+    transition: background-color 0.3s;
+}
+#desplegableOrdenar span:hover, #desplegable span:focus {
+    background-color: #BC6C25; 
+    color: white; 
+}
+#desplegableOrdenar.mostrarDesplegable{
+    display: block;
 }
 #filter{
     color: #283618;
     font-size: 1.2rem;
     font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
-    align-self: flex-end;
-    margin-right: 5vh;
     cursor: pointer;
 }
+
 #carreras{
+    position: relative;
     margin-top: 5vh;
     max-width: 1800px;
     width: 95vw;
-    height: 80vh;
+    height: 89vh;
     align-self: center;
     border: 3px solid #606C38;
     margin-bottom: 10vh;
-    padding: 35px;
+    padding: 40px;
+   
+}
+#rejillaCarreras{
     display: grid;
     grid-template-columns: repeat(4, minmax(250px, 1fr));
     grid-template-rows: repeat(2, minmax(170px, 1fr));
-    gap: 40px;
-    overflow-y: scroll;
+    gap: 60px;
 }
-#carreras::-webkit-scrollbar {
-    width: 8px; /* Ancho de la barra de desplazamiento */
-    
+#divPaginacion{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 30px;
+    color: #283618;
+    font-size: 1.1rem;
+    font-weight: bold;
+    /* font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif; */
+    font-family: Arial, Helvetica, sans-serif;
 }
-
-/* Personaliza el fondo de la barra de desplazamiento */
-#carreras::-webkit-scrollbar-track {
-    background: white; /* Color de fondo */
-}
-
-/* Personaliza el thumb de la barra de desplazamiento */
-#carreras::-webkit-scrollbar-thumb {
-    background: #283618; /* Color del thumb */
-}
-
-/* Personaliza el thumb de la barra de desplazamiento al pasar el mouse */
-#carreras::-webkit-scrollbar-thumb:hover {
-    background: #283618; /* Color del thumb al pasar el mouse */
+#divPaginacion span:hover:not(span:nth-child(3)){
+    cursor: pointer;
+    border-bottom: 3px solid #BC6C25;
 }
 
 .tarjetaCarrera{
-
-    box-shadow: 0px 2px 4px 0 rgba(0,0,0,0.5);
+    box-shadow: 0px 2px 5px 2px rgba(0,0,0,0.5);
+    transition: transform 0.2s ease;
+}
+.tarjetaCarrera:hover{
+    transform: scale(1.05);
 }
 .fotoPortada{
     min-height: 70px;
     height: 72%;
+    overflow: hidden;
+   
+}
+.fotoPortada p{
+    text-align: center;
+    width: 100%;
+    z-index: 1000;
+    background-color: white;
+    color: #283618;
+    font-size: 1.2rem;
+    font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+}
+.fotoPortada img{
+    
+    width: 100%;
+    height: 100%;
     
 }
 .datosCarrera{
@@ -326,3 +403,5 @@ div.detallesCarrera:hover{
 div.datosCarrera i{
     margin-right: 5px;
 }
+
+
