--- a/PAGINAS/CSS/inicio.css
+++ b/PAGINAS/CSS/inicio.css
@@ -88,6 +88,193 @@ header a.aCabecera::after {
 header a.aCabecera:hover:after {
     left: 0;
 }
+
+#divIniciarSesion{
+    user-select: none;
+    margin-left: 1vw;
+    color: white;
+    font-family:"Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+    border: 2px solid white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+}
+#divIniciarSesion:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+}
+#divIniciarSesion:active{
+    cursor: pointer;
+    transform: scale(1);
+}
+#miModal{
+    display: none;
+}
+  #miModal label{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2rem; 
+  }
+  #miModal a{
+    color: #BC6C25;
+  }
+  #miModal a:visited, #miModal a:active{
+    color: #BC6C25;
+  }
+ #miModal a:hover{
+    text-decoration: underline;
+
+  }
+  .modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1000; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: hidden; 
+    background-color: rgba(0,0,0,0.5); 
+    align-items: center; 
+    justify-content: center; 
+    display: flex;
+  }
+  .modal-contenido {
+    background-color: #ffffff;
+    margin: 15% auto; 
+    padding: 20px;
+    border-radius: 30px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    width: 20%; 
+    min-width: 250px;
+    border: 5px solid #606C38;
+    
+  }
+  .cerrar {
+    color: #000000;
+    float: right;
+    /* margin-right: 0.5vw;
+    margin-top: 0.5vh; */
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform 200ms ease;
+    
+  }
+  .cerrar:hover {
+    transform: scale(1.05); 
+  }
+  .cerrar:active{
+    transform: scale(0.95); 
+  }
+  
+  .modal-contenido h2 {
+    color: #566132;
+    font-size: 1.3rem; 
+    margin-top: 0;
+    /* text-align: center;  */
+    /* margin-left: 1vw; */
+    font-family: "Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+  }
+  
+  
+  .modal-cuerpo {
+    margin-top: 20px;
+    color: #333;
+    font-size: 16px; 
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  
+  .modal-pie {
+    margin-top: 20px;
+    text-align: right; 
+  }
+  
+  
+  .modal-pie button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    border: none; 
+    border-radius: 5px; 
+    font-size: 16px; 
+    cursor: pointer; 
+    transition: background-color 0.2s; 
+  }
+  
+  #mapaCarreras{
+    font-family: "Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
+    color: #283618;
+    position: relative;
+    align-self: flex-start;
+    margin-left: 15vh;
+    top: 3.5vh;
+  }
+  #mapaCarreras i{
+    margin-right: 5px;
+  }
+  
+  #mapaCarreras:hover{
+    cursor: pointer;
+  }
+
+
+  #miModalMapa{
+    display: none;
+    z-index: 9999999;
+  }
+  #map{
+    height: 67vh;
+    width: 76vw;
+  }
+  #miModalMapa .modal-contenido{
+    margin: 5% auto; 
+    width: 80%;
+    min-width: 250px;
+    height: 80%;
+  }
+
+  #guardarPerfil {
+    font-family: "Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    background-color: #606C38; 
+    color: white; 
+    transition: transform 200ms ease;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+  }
+  
+  #guardarPerfil:hover {
+    transform: scale(1.05); 
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.24);
+  }
+  #guardarPerfil:active{
+    background-color: #566132;
+    transform: scale(0.95); 
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  }
+  #guardarPerfil:disabled {
+    background-color: #ccc; 
+    color: #666; 
+    cursor: not-allowed; 
+    border: 1px solid #999; 
+    transition: none;
+    transform: none;
+  }
+  
+    
+  
+  #miModal input[type="text"], #miModal input[type="password"]{
+    width: 100%; 
+    padding: 10px;
+    margin-top: 10px; 
+    margin-bottom: 10px; 
+    border: 1px solid #ccc; 
+    border-radius: 5px;                                                  
+  }
+  
+
+
 #divPortada{
     display: flex;
     justify-content: center;
