--- a/PAGINAS/CSS/inicio.css
+++ b/PAGINAS/CSS/inicio.css
@@ -503,18 +503,18 @@ h1 span{
     align-self: center;
     border: 3px solid #606C38;
     margin-bottom: 10vh;
-    padding: 40px;
+    padding: 30px;
 }
 #rejillaCarreras{
     display: grid;
     grid-template-columns: repeat(4, minmax(250px, 1fr));
     grid-template-rows: repeat(2, minmax(170px, 1fr));
-    gap: 60px;
+    gap: 50px;
 }
 #divPaginacion{
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 30px;
     gap: 30px;
     color: #283618;
     font-size: 1.1rem;
@@ -530,6 +530,7 @@ h1 span{
 .tarjetaCarrera{
     box-shadow: 0px 2px 5px 2px rgba(0,0,0,0.5);
     transition: transform 0.2s ease;
+    max-height: 300px;
 }
 .tarjetaCarrera:hover{
     transform: scale(1.05);
