--- a/PAGINAS/CSS/perfil.css
+++ b/PAGINAS/CSS/perfil.css
@@ -175,8 +175,9 @@ section:nth-of-type(2) > div div:first-of-type svg{
   display: grid;
   grid-template-columns: repeat(4, minmax(280px, 1fr));
   grid-template-rows: minmax(170px, 1fr);
-  gap: 60px;
-  padding: 40px;
+  gap: 80px;
+  
+  padding: 30px 80px;
 }
 
 #carreras #rejillaCarreras .tarjetaCarrera{
@@ -595,7 +596,7 @@ section:nth-of-type(2) > div div:first-of-type svg{
   }
     
   
-  input[type="text"]{
+  input[type="text"], input[type="password"]{
     width: 100%; 
     padding: 10px;
     margin-top: 10px; 
@@ -1027,6 +1028,7 @@ button.crearCarreraBoton:active{
 #miModalMostrarCarreras .modal-cuerpo{
   display: grid;
   grid-template-columns: repeat(3, minmax(200px, 1fr));
+  grid-template-rows: minmax(170px, 1fr);
   gap: 20px;
   padding: 20px;
 }
